assets/css/css.css
header {
  background-color: lightseagreen;
  opacity: 0.8;
}

h1 {
  text-align: center;
  color: black;
  font-weight: bolder;
  padding-top: 20px;
  padding-bottom: 20px;
  font-size: 55px;
}

h2,
h3 {
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 28px;
  font-weight: bold;
}

.answerchoices {
  border: 0.1px solid black;
  border-radius: 1%;
  width: 30%;
  height: auto;
  color: black;
  text-align: center;
  margin: 10px auto;
  font-size: 25px;
  background-color: white;
}

#time {
  font-size: 20px;
  font-weight: bold;
}

.answerchoices:hover {
  background-color: lightgoldenrodyellow;
}

img {
  height: auto;
  width: auto;
}

body {
  background-image: url("../images/background.jpg");
  background-size: cover;
  font-family: Arial, Helvetica, sans-serif;
}

p {
  font-size: 18px;
  font-weight: bold;
}

.wrapper {
  margin: 00px auto;
  padding-top: 10px;
  background-color: rgba(255, 255, 255, 0.7);
  border: 2px solid #03030f;
  height: 650px;
  width: 60%;
  text-align: center;
}

.btn {
  position: relative;
  bottom: -150px;
  border: 2px solid #03030f;
}

